2007-11-08  Fridrich Strba  <fridrich.strba@bluewin.ch>

	* source/numeric/lpmodel.cxx, source/ui/lpbuilder.cxx,
	  source/ui/dialog.cxx, source/ui/solvemodel.cxx: add
	  using ::std::distance and using ::std::find (fixes build on SLED10).

2007-11-07  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/fr/scsolver.properties: added for French
	localization.

2007-11-07  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/unoglobal.hxx: moved #include <sal/config.h> to the top of
	the include lines.
	
	* source/numeric/cellfuncobj.cxx:
	* source/numeric/diff.cxx:
	* source/numeric/diff_test.cxx:
	* source/numeric/funcobj.cxx:
	* source/numeric/lpbase.cxx:
	* source/numeric/lpmodel.cxx:
	* source/numeric/lpsimplex.cxx:
	* source/numeric/lpsolve.cxx:
	* source/numeric/matrix.cxx:
	* source/numeric/nlpbase.cxx:
	* source/numeric/nlpmodel.cxx:
	* source/numeric/nlpqnewton.cxx:
	* source/numeric/polyeqnsolver.cxx:
	* source/numeric/quadfitlinesearch.cxx:
	* source/service/service.cxx:
	* source/tool/global.cxx:
	* source/ui/basedlg.cxx:
	* source/ui/dialog.cxx:
	* source/ui/listener.cxx:
	* source/ui/lpbuilder.cxx:
	* source/ui/optiondlg.cxx:
	* source/ui/solvemodel.cxx:
	* source/ui/xcalc.cxx: removed 'using namespace std' because apparently
	that causes a problem compiling boost ublas library with sun studio 
	compiler.

2007-11-07  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/basedlg.hxx:
	* source/numeric/diff.cxx:
	* source/service/service.cxx:
	* source/tool/global.cxx:
	* source/ui/basedlg.cxx:
	* source/ui/baselistener.cxx:
	* source/ui/dialog.cxx:
	* source/ui/listener.cxx:
	* source/ui/lpbuilder.cxx:
	* source/ui/msgdlg.cxx:
	* source/ui/optiondlg.cxx: removed compiler warnings on Solaris using
	sun studio compiler.

2007-11-06  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/cellfuncobj.hxx: include "unoglobal.hxx" to resolve
	the issue with macro define 'sun'.
	