@@ -34,6 +34,8 @@
 
 #define SCSOLVER_DEBUG 0
 
+#define REWRITE_FOR_SUN_STUDIO_COMPILER 1
+
 #if defined(SCSOLVER_UNO_COMPONENT) || defined(SCSOLVER_UNITTEST)
 
 #ifndef OSL_ASSERT
