@@ -1,3 +1,9 @@
+2007-11-08  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/tool/global.hxx:
+	* source/numeric/matrix.cxx: re-wrote parts of it to (try to) get it to 
+	compile under sun studio 12 compiler.
+
 2007-11-08  Fridrich Strba  <fridrich.strba@bluewin.ch>
 
 	* source/numeric/lpmodel.cxx, source/ui/lpbuilder.cxx,
